--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 server.port=8080
 
-## MySQL
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:brs}?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_USER_PASSWORD:root}
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # drop n create table, good for testing, comment this in production
 spring.jpa.show-sql=${SHOW_SQL:false}
 
