--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,14 @@ spring.datasource.username=sa
 spring.datasource.password=password
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# drop n create table, good for testing, comment this in production
-spring.jpa.show-sql=${SHOW_SQL:false}
 
 #Set active profile
 spring.profiles.active=@activatedProperties@
+
+# spring kafka
+spring.kafka.bootstrap-servers=127.0.0.1:9092
+spring.kafka.producer.retries=2
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 logging.level.web=${LOG_LEVEL:DEBUG}
 management.endpoints.web.exposure.include=*
