--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<java.version>1.8</java.version>
 		<downloadSources>true</downloadSources>
 		<downloadJavadocs>true</downloadJavadocs>
+		<testable.version>0.5.2</testable.version>
 	</properties>
 
 	<dependencies>
@@ -83,6 +84,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.alibaba.testable</groupId>
+			<artifactId>testable-all</artifactId>
+			<version>${testable.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
@@ -96,15 +103,15 @@
 
 	<profiles>
 		<profile>
-			<id>UAT</id>
+			<id>dev</id>
 			<properties>
-				<activatedProperties>UAT</activatedProperties>
+				<activatedProperties>dev</activatedProperties>
 			</properties>
 		</profile>
 		<profile>
-			<id>PROD</id>
+			<id>prod</id>
 			<properties>
-				<activatedProperties>PROD</activatedProperties>
+				<activatedProperties>prod</activatedProperties>
 			</properties>
 		</profile>
 	</profiles>
@@ -115,7 +122,13 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-javaagent:${settings.localRepository}/com/alibaba/testable/testable-agent/${testable.version}/testable-agent-${testable.version}.jar</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
-
 </project>
